[YG] - fixed layout issues on yacht charter page

--- a/packages/navigate-theme/src/styles/components/_yacht.scss
+++ b/packages/navigate-theme/src/styles/components/_yacht.scss
@@ -47,7 +47,7 @@
   }
 
   &-container {
-    display: grid;
+    // display: grid;
     margin-top: 8rem;
 
     @include respond(phone) {
